tests/parser/bug_64/test4.m.out
In test4.m, line 3
| x = [[1]1];
|         ^ error: expected COMMA, found NUMBER instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
