tests/parser/bug_64/test4.m
% (c) Copyright 2019 Florian Schanda

x = [[1]1];
% should be a parse error
